Fix gutter on smallest (320px) screens

--- a/sitemedia/scss/base/_mixins.scss
+++ b/sitemedia/scss/base/_mixins.scss
@@ -6,6 +6,7 @@
 	/* for blog posts and text content pages */
 	padding: 0;
 	margin-bottom: 50px;
+	@include grid-column(9);
 	
 	@media (min-width: $medium-min-width) {
 		@include grid-push(1);
